MangoBajito/tests/Lenguajes_II/Declaracion/valid/14-arrozConMango_anidado.mng
se_prende(){
	arroz_con_mango Persona {
		nombre : higuerote;
		sexo : negro;
		edad : mango;
	};

	arroz_con_mango Registro {
		codigo : mango;
		usuario : Persona;
	}

	culito registro_1 : Registro = {0, {"Junior", 'M', 26}};
	culito registro_2 : Registro = {1, {"Astrid", 'F', 23}};
};