MangoBajito/tests/Lenguajes_II/Declaracion/errors/13-arrozConMango_anidado.mng
# Test 13: Errores de uso anidado del tipo arroz_con_mango.
se_prende(){
	arroz_con_mango Persona {
		nombre : higuerote;
		sexo : negro;
		edad : mango;
	};
	
	arroz_con_mango Registro {
		codigo : mango;
		usuario : higuerote;
	};

	culito registro_1 : Registro = {0, {"Junior", 'M', 26}};
};